--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/autoupdate_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/autoupdate_index.vm
@@ -6,72 +6,74 @@
 -->
 <script>
 $(function(){
-
-	$("#container").removeClass("setting");
-
-	// 金额表单控制
-	$("#autoamt").on("blur", function(){
-		var autoamt = formatCurrency1($("#autoamt").val());
-		if(autoamt == '0.00'){
-			$("#autoamt").val('');
-			showTips($(this), "请输入正确格式的金额，比如1000.00！");
-		}else{
-			$("#autoamt").val(autoamt);
-		}
-	});
+	$('.nav a:eq(1)').addClass('active');
 	
+	$("#container").removeClass("setting");
 	// 点击银行卡
 	$(".card").on("click", function(){
 		$("#frombankserialid").val($(this).attr("serialid"));
 		$("#frombankno").val($(this).attr("frombankno"));
 		$("#frombanktail").val($(this).attr("frombanktail"));
-		//$("#fromtradeacco").val($(this).attr("tradeacco"));
-		//$("#totradeacco").val($(this).attr("tradeacco"));
 	});
 	
 	// 表单提交时，验证	
 	$("#submit").on("click", function(){
-		if(!check_cash($("#autoamt"))){
+		//校验自动充值金额
+		var autoamt=$("#autoamt").val();
+		if(autoamt==''){
+			$("#autoamtErrMsg").addClass("error");
+			$("#autoamtTips").html("充值金额不能为空！");
 			return false;
 		}
-		if(!check_autoDat($("#dat"))){
+		autoamt = formatCurrency1(autoamt);
+		if(autoamt == '0.00'){
+			$("#autoamt").val('');
+			$("#autoamtErrMsg").addClass("error");
+			$("#autoamtTips").html("请输入正确格式的金额，比如1000.00！");
 			return false;
+		}else{
+			$("#autoamtErrMsg").removeClass("error");
+			$("#autoamt").val(autoamt);
 		}
-		$(".common-form").attr("action","../family/autoTradeUpdate_preview.htm");
+		//校验日期
+			var dat=$("#dat").val();
+			if(dat==''){
+				$("#datErrMsg").addClass("error");
+				$("#datTips").html("充值日期不能为空！");
+				return false;
+			}
+		   if (dat.length > 2) {
+			   $("#datErrMsg").addClass("error");
+				$("#datTips").html("充值时间为2位数字");
+				return false;
+		    }
+		    var regex2 = /^[0-8]+$/;
+		    if (!regex2.test(dat)) {
+		    	$("#datErrMsg").addClass("error");
+				$("#datTips").html("充值时间范围为1至28日");
+				return false;
+		    }
+		    if (dat>29 || dat<1) {
+		    	$("#datErrMsg").addClass("error");
+				$("#datTips").html("充值时间范围为1至28日");
+				return false;
+		    }
 	});
 });
 </script>
 </head>
 
 <body>
-	<div class="container">
-    <div id="header">
-		<div class="topNav">
-			<div class="container">
-				<div class="b1"><a href="#" class="active">机构版</a><a href="#">家庭版</a></div>
-				<div class="b2"><span>柔软的大牛</span><a href="${staticDomain}/family/settingAccount.htm"></a></div>
-			</div>
-		</div>
-        <div class="container">
-            <a href="#" class="logo"></a>
-			<div class="nav">
-				<a href="${staticDomain}/family/session.htm">我的账户</a>
-				<a href="${staticDomain}/family/myufb.htm" class="active">幼富宝</a>
-				<a href="#">缴费明细</a>
-				<a href="${staticDomain}/family/helpAbout.htm">帮助中心</a>
-			</div>
-        </div>
-    </div>
 <div class="body">
     <div class="inner container-step">
-        <div class="step-title clearfix">修改自动充值计划<a class="link link-underline fr" href="${staticDomain}/family/settingAutoFund.htm">&lt;&lt;自动充值计划</a></div>
+        <div class="step-title clearfix">修改自动充值计划<a class="link link-underline fr" href="${ufbDomain}/family/ufb/autotrade_index.htm">&lt;&lt;自动充值计划</a></div>
         <div class="step-tabs tabs-step1 clearfix">
             <a class="tab fl on" href="javascript:;">自动充值（修改）</a>
             <a class="tab fl" href="javascript:;">预览自动充值计划（修改）</a>
             <a class="tab fl" href="javascript:;">结果（修改）</a>
         </div>
         <div class="step-panels">
-			<form class="common-form" action="${ufbDomain}/family/autoTrade_update.htm" method="post">
+			<form class="common-form" action="${ufbDomain}/family/ufb/autoupdate_preview.htm" method="post">
 				<input id="frombankserialid" name="frombankserialid" value="${curCard.serialid}" type="hidden"/>
                 #set($tailStr=$curCard.bankacco)
 				#set($start=$tailStr.length() - 4)
@@ -89,7 +91,7 @@ $(function(){
                             <span class="form-title">银行选择</span>
                             <div class="input-select">
 								<div class="card card-current">
-                                    <img src="${staticDomain}/static/family/images/bank_${curCard.bankno}.png">
+                                    <img src="${staticDomain}/family/images/bank_${curCard.bankno}.png">
                                     <span class="card-lastNumber">尾号：$tailStr.substring($start,$end)</span>
                                 </div>
 								<div class="input-options">
@@ -103,7 +105,7 @@ $(function(){
 											frombankno="${card.bankno}"
 											frombanktail="$tailStr.substring($start,$end)"
 											>
-    										<img src="${staticDomain}/static/family/images/bank_${card.bankno}.png">
+    										<img src="${staticDomain}/family/images/bank_${card.bankno}.png">
                                             <span class="card-lastNumber">尾号：$tailStr.substring($start,$end)</span>
                                         </a>
     									#end
@@ -113,22 +115,22 @@ $(function(){
                             <span class="tips-normal"></span>
                             <span class="tips-check"><i class="icon"></i>验证提示</span>
                         </li>
-						<li>
+						<li id="autoamtErrMsg">
                             <span class="form-title">充值金额</span>
                             <input id="autoamt" name="autoamt" class="ipt-autoamt input-text" maxlength="11" type="text" value="$!{AutoTradeVo.autoamt}">元
-                            <span class="tips-normal">请填写充值金额</span>
-                            <span id="appamtTips" class="tips-check"><i class="icon"></i>验证提示</span>
+                            <span class="tips-normal">#if(${AutoTradeVo.autoamt})#else 请填写充值金额 #end</span>
+                            <span  class="tips-check"><i class="icon"></i><font id="autoamtTips" >验证提示</font></span>
                         </li>
-                        <li>
+                        <li id="datErrMsg">
                             <span class="form-title">设置充值时间</span>
 							每月<input id="dat" name="dat" class="ipt-dat input-short" maxlength="2" type="text" value="$!{AutoTradeVo.dat}">日
                             <span class="tips-normal"></span>
-                            <span class="tips-check"><i class="icon"></i>验证提示</span>
+                            <span class="tips-check"><i class="icon"></i><font id="datTips">验证提示</font></span>
                         </li>
 						<li>
                             <span class="form-title">备注</span>
                             <input id="summary" name="summary" class="ipt-summary input-text" maxlength="50" type="text" value="$!{AutoTradeVo.summary}">
-                            <span class="tips-normal">如：收费理财、闲置资金</span>
+                            <span class="tips-normal">#if(${AutoTradeVo.summary})#else 如：收费理财、闲置资金 #end</span>
                             <span id="appamtTips" class="tips-check"><i class="icon"></i>验证提示</span>
                         </li>
                         <li>
@@ -140,29 +142,8 @@ $(function(){
         </div>
     </div>
 </div>
-  <!--   <div class="footer footer-simple">
-    <div class="inner clearfix">
-        <div class="logo fl">
-            <img src="${staticDomain}/static/family/images/logo_130x55.png">
-        </div>
-        <div class="info fl">
-            <ul class="list">
-                <li>微信服务号：UFUfund</li>
-                <li>服务邮箱：<a href="mailto:service@ufufund.com">service@ufufund.com</a></li>
-                <li>海富通产品：400-8840-099</li>
-            </ul>
-        </div>
-        <div class="copyright fr">
-            <ul class="list">
-                <li>幼富通版权所有 ©2014</li>
-                <li><a target="_blank" href="http://www.miitbeian.gov.cn/">沪ICP备14054347号</a></li>
-            </ul>
-            </div>
-        </div>
-	</div>-->
 </div>
-<script src="${staticDomain}/js/scripts/load.js"></script>
-<script src="${staticDomain}/js/scripts/register.js"></script>
-<script src="${staticDomain}/js/ufuCommon.js"></script>
+<script src="${staticDomain}/family/scripts/load.js"></script>
+<script src="${staticDomain}/family/scripts/family-common.js"></script>
 </body>
 </html>
