--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/autoupdate_preview.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/autoupdate_preview.vm
@@ -6,56 +6,39 @@
 -->
 <script>
 $(function(){
-
+	$('.nav a:eq(1)').addClass('active');
+	
 	$("#container").removeClass("setting");
-
+	$("#tradepwd").on("blur",function(){
+		$(".tips-normal").val("");
+	})
 	// 表单提交时，验证	
 	$("#next-step").on("click", function(){
-		if(!check_pwd1($("#tradepwd"))){
+		var tradepwd=$("#tradepwd").val();
+		if(tradepwd==''){
+			$("#tradepwdErrMsg").addClass("error");
+			$("#tradePwdTips").html("交易密码不能为空！");
 			return false;
 		}
-		$("#form-autoTrade-result").attr("action","../family/autoTradePause_result.htm");
-		$("#form-autoTrade-result").submit();
 	});
-	
 	// 上一页
-	$("#btn-autoTrade-pause").on("click",function(){
-		$("#form-autoTrade-result").attr("action", "../family/autoTrade_pause.htm");
+	$("#btn-autoTrade-update").on("click",function(){
+		$("#form-autoTrade-result").attr("action", "${ufbDomain}/family/ufb/autoupdate_index.htm");
 		$("#form-autoTrade-result").submit();
 	});
 });
 </script>
 </head>
 <body>
-		<div class="container">
-    <div id="header">
-		<div class="topNav">
-			<div class="container">
-				<div class="b1"><a href="#" class="active">机构版</a><a href="#">家庭版</a></div>
-				<div class="b2"><span>柔软的大牛</span><a href="${staticDomain}/family/settingAccount.htm"></a></div>
-			</div>
-		</div>
-        <div class="container">
-            <a href="#" class="logo"></a>
-			<div class="nav">
-				<a href="${staticDomain}/family/session.htm">我的账户</a>
-				<a href="${staticDomain}/family/myufb.htm" class="active">幼富宝</a>
-				<a href="#">缴费明细</a>
-				<a href="${staticDomain}/family/helpAbout.htm">帮助中心</a>
-			</div>
-        </div>
-    </div>
-<div class="body">
-	
     <div class="inner container-step">
-        <div class="step-title clearfix">暂停自动充值计划<a class="link link-underline fr" href="${staticDomain}/family/settingAutoFund.htm">&lt;&lt;自动充值计划</a></div>
+        <div class="step-title clearfix">修改自动充值计划<a class="link link-underline fr" href="${ufbDomain}/family/ufb/autotrade_index.htm">&lt;&lt;自动充值计划</a></div>
         <div class="step-tabs tabs-step2 clearfix">
-            <a class="tab fl" href="javascript:;">自动充值（暂停）</a>
-            <a class="tab fl on" href="javascript:;">预览自动充值计划（暂停）</a>
-            <a class="tab fl" href="javascript:;">开通结果（暂停）</a>
+            <a class="tab fl" href="javascript:;">自动充值（修改）</a>
+            <a class="tab fl on" href="javascript:;">预览自动充值计划（修改）</a>
+            <a class="tab fl" href="javascript:;">开通结果（修改）</a>
         </div>
         <div class="step-panels">
-			<form id="form-autoTrade-result" class="common-form" action="${ufbDomain}/family/autoTradePause_result.htm" method="post">
+			<form id="form-autoTrade-result" class="common-form" action="${ufbDomain}/family/ufb/autoupdate_success.htm" method="post">
 				${refreshTools.genInputHtml()}
 				<input id="custno" name="custno" value="${AutoTradeVo.custno}" type="hidden"/>
 				<input id="frombankserialid" name="frombankserialid" value="${AutoTradeVo.frombankserialid}" type="hidden"/>
@@ -87,7 +70,7 @@ $(function(){
                         <li>
                             <span class="form-title">银行选择</span>
                             <div class="input-card">
-								<img src="${staticDomain}/static/family/images/bank_${AutoTradeVo.frombankno}.png">
+								<img src="${staticDomain}/family/images/bank_${AutoTradeVo.frombankno}.png">
 									<span class="card-number">尾号：${AutoTradeVo.frombanktail}</span>
 								</div>
                         </li>
@@ -109,19 +92,19 @@ $(function(){
                             <span class="form-title">备注</span>
                             <span class="form-text">${AutoTradeVo.summary}</span>
                         </li>
-                        <li>
+                        <li id="tradepwdErrMsg">
                             <span class="form-title">交易密码</span>
-                            <input id="tradepwd" name="tradepwd" class="ipt-password1 input-text" maxlength="20"  type="password" value="">
+                            <input id="tradepwd" name="tradepwd" class="ipt-password" maxlength="20"  type="password" value="">
                             <a class="find" href="${staticDomain}/family/settingPassword.htm">忘记密码?</a>
-							<span class="tips-normal">请填写交易密码</span>
-                            <span id="tradePwdTips" class="tips-check"><i class="icon"></i>验证提示</span>
+							<span class="tips-normal"><!--请填写交易密码--></span>
+                            <span class="tips-check"><i class="icon"></i><font  id="tradePwdTips" >验证提示</font></span>
                         </li>
                         <li>
                             <label class="tips">点击下一步表示同意<a class="link" href="javascript:;">《幼富通用户注册协议》</a></label>
                         </li>
                         <li class="clearfix">
-                            <a id="btn-autoTrade-pause" class="input-button fl" href="#">返回修改</a>
-                            <input id="next-step" class="input-button ok fl" type="button" value="下一步">
+                            <a id="btn-autoTrade-update" class="input-button fl" href="javascript:;">返回修改</a>
+                            <input id="next-step" class="input-button ok fl" type="submit" value="下一步">
                         </li>
                     </ul>
                 </div>
@@ -129,29 +112,6 @@ $(function(){
         </div>
     </div>
 </div>
-  <!--   <div class="footer footer-simple">
-    <div class="inner clearfix">
-        <div class="logo fl">
-            <img src="${staticDomain}/static/family/images/logo_130x55.png">
-        </div>
-        <div class="info fl">
-            <ul class="list">
-                <li>微信服务号：UFUfund</li>
-                <li>服务邮箱：<a href="mailto:service@ufufund.com">service@ufufund.com</a></li>
-                <li>海富通产品：400-8840-099</li>
-            </ul>
-        </div>
-        <div class="copyright fr">
-            <ul class="list">
-                <li>幼富通版权所有 ©2014</li>
-                <li><a target="_blank" href="http://www.miitbeian.gov.cn/">沪ICP备14054347号</a></li>
-            </ul>
-            </div>
-        </div>
-	</div>-->
 </div>
-<script src="${staticDomain}/static/family/scripts/load.js"></script>
-<script src="${staticDomain}/static/family/scripts/register.js"></script>
-<script src="${staticDomain}/static/family/ufuCommon.js"></script>
 </body>
 </html>
