--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/pay_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/pay_index.vm
@@ -92,6 +92,7 @@
         </div>
     </div>
 </div>
+<script src="${staticDomain}/family/scripts/load.js"></script>
 <script src="${staticDomain}/family/scripts/family-common.js"></script>
 <script type="text/javascript">
 $(function(){
@@ -106,6 +107,8 @@ $(function(){
 </script>
 <script type="text/javascript">
 $(function(){
+	
+	$('.nav a:eq(1)').addClass('active');
 	// 点击银行卡
 	$(".card").on("click", function(){
 		$("#tradeacco").val($(this).attr("tradeacco"));
