--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/pay_result.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/pay_result.vm
@@ -7,6 +7,9 @@
             margin-top:0;
         }
     </style>
+    $(function(){
+    	$('.nav a:eq(1)').addClass('active');
+    })
 </head>
 <body>
     <div class="body">
@@ -30,6 +33,5 @@
         </div>
     </div>
 </div>
-<script src="${staticDomain}/family/scripts/load.js"></script>
 </body>
 </html>
