--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/autoupdate_preview.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/autoupdate_preview.vm
@@ -58,7 +58,7 @@ $(function(){
 				<input id="step" name="step" value="u2" type="hidden"/>
 				
 				<div class="panel">
-                    <ul>
+                    <ul class="txtAuto width600"> 
                         <li>
                             <span class="form-title">绑定货币基金</span>
                             <span class="form-text">海富通货币A    代码： 519505</span>
