--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/query_detail.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/query_detail.vm
@@ -39,7 +39,7 @@
     									#end
 								</span></td></tr>
                             <tr><td>&nbsp;</td><td>
-									<img src="${staticDomain}/static/family/images/bank_${TradeRequest.bankno}.png">
+									<img src="${staticDomain}/family/images/bank_${TradeRequest.bankno}.png">
 										尾号：
 										#set($tailStr=${TradeRequest.bankacco})
 										#set($start=$tailStr.length() - 4)
